--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "i18ncsv2json",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "i18ncsv2json": "index.js"
+  }
   "dependencies": {
     "commander": "^2.9.0",
     "csv-parse": "^1.0.1",
