--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18ncsv2json",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -9,6 +9,7 @@
   "dependencies": {
     "commander": "^2.9.0",
     "csv-parse": "^1.0.1",
+    "lodash-transpose": "^0.1.1",
     "mkdirp": "^0.5.1",
     "object-path": "^0.9.2"
   },
