--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commander": "^2.9.0",
     "csv-parse": "^1.0.1",
     "lodash-transpose": "^0.1.1",
+    "lodash.merge": "^4.6.0",
     "mkdirp": "^0.5.1",
     "object-path": "^0.9.2"
   },
