--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "csv-parse": "^1.0.1",
     "lodash-transpose": "^0.1.1",
     "lodash.merge": "^4.6.0",
-    "mkdirp": "^0.5.1",
-    "object-path": "^0.9.2"
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {},
   "scripts": {
