--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lodash-transpose": "^0.1.1",
     "lodash.merge": "^4.6.0",
     "mkdirp": "^0.5.1",
-    "object-path": "^0.9.2"
+    "object-path": "^0.9.2",
+    "glob": "^7.1.2"
   },
   "devDependencies": {},
   "scripts": {
